# embedwise

./: .gitignore  README.md  Untitled.ipynb  embed.py  pyproject.toml
embedwise/: __init__.py  utils.py
embedwise/data/: text_data.py
embedwise/embedders/: __init__.py  _flair.py  _hfEmbedder.py  _sentenceEmbedder.py  baseEmbedder.py
examples/: example_text_classification.ipynb
