[tool.poetry]
name = "embedwise"
version = "0.1.0"
description = ""
authors = ["Panos <panagiotisban@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
requests = "^2.31.0"
numpy = "^1.26.1"
pandas = "^2.1.2"
torch = ">=1.5.0,<1.8 || >1.8"
datasets = "^2.14.6"
altair = "^5.1.2"
flask = "^3.0.0"
sentence-transformers = "^2.2.2"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
