[tool.poetry]
name = "embedwise"
version = "0.1.0"
description = ""
authors = ["Panos <panagiotisban@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
requests = "^2.31.0"
numpy = "^1.26.1"
pandas = "^2.1.2"
torch = ">=1.5.0,<1.8 || >1.8"
datasets = "^2.14.6"
sentence-transformers = {version = "^2.2.2", optional = true}
scikit-learn = "^1.3.2"
transformers = {version = "^4.35.0", optional = true}
flair = {version = "^0.13.0", optional = true}


[tool.poetry.group.dev.dependencies]
transformers = "^4.35.0"
flair = {version = "^0.13.0", optional = true}

[tool.poetry.extras]
huggingface = ["transformers"]
flair = ["flair"]
sentencetf = ["sentence-transformers"]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
