[tool.poetry]
name = "embedwise"
version = "0.1.0"
description = ""
authors = ["Panos <panagiotisban@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
requests = "^2.31.0"
numpy = "^1.26.1"
pandas = "^2.1.2"
torch = ">=1.5.0,<1.8 || >1.8"
sentence-transformers = "^2.2.2"
scikit-learn = "^1.3.2"
transformers = "^4.35.0"
flair = "^0.13.0"
datasets = "^2.15.0"
black = "^23.11.0"
pre-commit = "^3.5.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
